site files added with bootstrap and css, bootstrap template used

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"> Home </a>
-            <a class="navbar-brand" href="#"> Genre </a>
-            <a class="navbar-brand" href="#"> Trending </a>
-            <a class="navbar-brand" href="#"> Merchandise </a>
-            <a class="btn btn-primary" href="#">Sign In</a>
+            <a class="navbar-brand" href="index.html"> Home </a>
+            <a class="navbar-brand" href="html-pages/genre.html"> Genre </a>
+            <a class="navbar-brand" href="html-pages/trending.html"> Trending </a>
+            <a class="navbar-brand" href="html-pages/merchandise.html"> Merchandise </a>
+            <a class="navbar-brand" href="html-pages/contact.html">Contact</a>
         </div>
     </nav>
 
