--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+        integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
 
     <title>Music Hack</title>
 
@@ -76,30 +78,32 @@
     <section class="features-icons bg-light text-center">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                <div class="col-lg-4 icon-text">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 icons">
                         <div class="features-icons-icon d-flex">
-                            <i class="icon-screen-desktop m-auto text-primary"></i>
+                            <a href="#upcoming-events"><i id="icon-calendar"
+                                    class="far fa-calendar-alt m-auto text-primary"></i></a>
                         </div>
-                        <h3>Fully Responsive</h3>
-                        <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                        <h3> Upcoming Events </h3>
+                        <p class="lead mb-0"> Find upcoming concerts and tickets! </p>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                <div class="col-lg-4 icon-text">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 icons">
                         <div class="features-icons-icon d-flex">
-                            <i class="icon-layers m-auto text-primary"></i>
+                            <a href="#trending"><i id="icon-chart-line"
+                                    class="fas fa-chart-line m-auto text-primary"></i></a>
                         </div>
-                        <h3>Bootstrap 4 Ready</h3>
-                        <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+                        <h3> Social Media Trends </h3>
+                        <p class="lead mb-0">Featuring the latest trends related to the concert you're looking for.</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                <div class="col-lg-4 icon-text">
+                    <div class="features-icons-item mx-auto mb-0 mb-lg-3 icons">
                         <div class="features-icons-icon d-flex">
-                            <i class="icon-check m-auto text-primary"></i>
+                            <a href="#merchandise"><i id="icon-merch" class="fas fa-tshirt m-auto text-primary"></i></a>
                         </div>
-                        <h3>Easy to Use</h3>
+                        <h3> Merchandise </h3>
                         <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
                     </div>
                 </div>
@@ -114,8 +118,8 @@
 
                 <div class="col-lg-6 order-lg-2 text-white showcase-img"
                     style="background-image: url('img/bg-showcase-1.jpg');"></div>
-                <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                    <h2> Genre </h2>
+                <div id="upcoming-events" class="col-lg-6 order-lg-1 my-auto showcase-text">
+                    <h2> Upcoming Events </h2>
                     <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will
                         look great on any device, whether it's a phone, tablet, or desktop the page will behave
                         responsively!</p>
@@ -124,7 +128,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');">
                 </div>
-                <div class="col-lg-6 my-auto showcase-text">
+                <div id="trending" class="col-lg-6 my-auto showcase-text">
                     <h2> Trending </h2>
                     <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the
                         way in mobile responsive web development! All of the themes on Start Bootstrap are now using
@@ -134,7 +138,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-6 order-lg-2 text-white showcase-img"
                     style="background-image: url('img/bg-showcase-3.jpg');"></div>
-                <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                <div id="merchandise" class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2> Merchandise </h2>
                     <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand
                         some deeper customization options. Out of the box, just add your content and images, and your
