--- a/index.html
+++ b/index.html
@@ -116,13 +116,22 @@
         <div class="container-fluid p-0">
             <div class="row no-gutters">
 
-                <div class="col-lg-6 order-lg-2 text-white showcase-img"
-                    style="background-image: url('img/bg-showcase-1.jpg');"></div>
-                <div id="upcoming-events" class="col-lg-6 order-lg-1 my-auto showcase-text">
+                <div class="col-lg-12 order-lg-2 text-white showcase-img"></div>
+                <div id="upcoming-events" class="col-lg-12 order-lg-1 my-auto showcase-text">
                     <h2> Upcoming Events </h2>
-                    <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will
-                        look great on any device, whether it's a phone, tablet, or desktop the page will behave
-                        responsively!</p>
+                    <section class="card">
+                        <div class="card--content">
+                            <div class="card" style="width: 18rem;">
+                                <img src="..." class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Adele</h5>
+                                    <p class="card-text">Location: <span id="location"></span></p>
+                                    <a href="#" class="btn btn-primary">Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card--content"></div>
+                    </section>
                 </div>
             </div>
             <div class="row no-gutters">
