--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <script src="assets/javascript/tm-api.js"></script>
 </body>
 
 </html>
