--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
             <div class="row no-gutters">
 
 
-                <div id="upcoming-events" class="col-lg-12 order-lg-1 my-auto showcase-text">
+                <div id="upcoming-events" class="col-sm-12 d-flex justify-content-center">
                     <h2> Upcoming Events </h2>
-                    <section class="card">
-                        <div class="card--content">
-                            <div class="card" style="width: 18rem;">
-                                <img class="card-img-top">
-                                <div class="card-body">
-                                    <h5 class="card-title">Adele</h5>
-                                    <p class="card-text">Location: <span id="location"></span></p>
-                                    <a href="#" class="btn btn-primary">Details</a>
-                                </div>
+                    <!-- <section class="card"> -->
+                    <div class="card--content">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Adele</h5>
+                                <p class="card-text">Location: <span id="location"></span></p>
+                                <a href="#" class="btn btn-primary">Details</a>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                    <!-- </section> -->
                 </div>
             </div>
             <div class="row no-gutters">
@@ -157,18 +157,18 @@
 
                 <div id="merchandise" class="col-lg-12 order-lg-1 my-auto showcase-text">
                     <h2> Merchandise </h2>
-                    <section class="card">
-                        <div class="card--content">
-                            <div class="card" style="width: 18rem;">
-                                <img class="card-img-top">
-                                <div class="card-body">
-                                    <h5 class="card-title">Adele</h5>
-                                    <p class="card-text">Location: <span id="location"></span></p>
-                                    <a href="#" class="btn btn-primary">Details</a>
-                                </div>
+                    <!-- <section class="card"> -->
+                    <div class="card--content">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Adele</h5>
+                                <p class="card-text">Location: <span id="location"></span></p>
+                                <a href="#" class="btn btn-primary">Details</a>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                    <!-- </section> -->
                 </div>
             </div>
         </div>
