--- a/html-pages/genre.html
+++ b/html-pages/genre.html
@@ -15,15 +15,17 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
         integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 
     <title>Music Hack</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+    <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"> -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
         type="text/css">
 
@@ -36,49 +38,221 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
-            <a class="navbar-brand" href="../index.html"> Home </a>
-            <a class="navbar-brand" href="html-pages/genre.html"> Genre </a>
+            <a class="navbar-brand" href="index.html"> Home </a>
+            <!-- <a class="navbar-brand" href="html-pages/genre.html"> Genre </a>
             <a class="navbar-brand" href="html-pages/trending.html"> Trending </a>
-            <a class="navbar-brand" href="html-pages/merchandise.html"> Merchandise </a>
+            <a class="navbar-brand" href="html-pages/merchandise.html"> Merchandise </a> -->
             <a class="navbar-brand" href="html-pages/contact.html">Contact</a>
         </div>
     </nav>
-    <div class="container">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container" style="text-align: center">
-                <h1 class="display-4"> Have a Question or Comment? </h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.
-                </p>
+
+    <!-- Masthead -->
+    <header class="masthead text-white text-center">
+        <div class="overlay">
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+                <source src="../project-1/assets/images/concert-video-pexels.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-9 mx-auto">
+                    <h1 class="mb-5 page-title">Music Hack </h1>
+                    <h2 class="mb-5"> Get your latest concert scoop. </h2>
+                </div>
+                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                    <form>
+                        <div class="form-row">
+                            <div class="col-12 col-md-9 mb-2 mb-md-0">
+                                <input id="user-input" class="form-control form-control-lg"
+                                    placeholder="Search by artist or location">
+                            </div>
+                            <div class="col-12 col-md-3">
+                                <button type="submit" class="btn btn-block btn-lg btn-primary hack-it"> Hack It!
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
+    </header>
+
+    <!-- Icons Grid -->
+    <section class="features-icons bg-light text-center icon-display">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 icon-text">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 icons">
+                        <div class="features-icons-icon d-flex">
+                            <a href="#upcoming-events"><i id="icon-calendar"
+                                    class="far fa-calendar-alt m-auto text-primary"></i></a>
+                        </div>
+                        <h3> Upcoming Events </h3>
+                        <p class="lead mb-0"> Find upcoming concerts and tickets! </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 icon-text">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 icons">
+                        <div class="features-icons-icon d-flex">
+                            <a href="#trending"><i id="icon-chart-line"
+                                    class="fas fa-chart-line m-auto text-primary"></i></a>
+                        </div>
+                        <h3> Social Media Trends </h3>
+                        <p class="lead mb-0">Featuring the latest trends related to the concert you're looking for.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 icon-text">
+                    <div class="features-icons-item mx-auto mb-0 mb-lg-3 icons">
+                        <div class="features-icons-icon d-flex">
+                            <a href="#merchandise"><i id="icon-merch" class="fas fa-tshirt m-auto text-primary"></i></a>
+                        </div>
+                        <h3> Merchandise </h3>
+                        <p class="lead mb-0">Browse the latest merchandise related to your favorite artist and their
+                            upcoming concerts!</p>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlTextarea1"> Message </label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+        </div>
+    </section>
+
+    <!-- Image Showcases -->
+    <section class="showcase">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters">
 
 
+                <div id="upcoming-events" class="col-sm-12 d-flex justify-content-center">
+                    <h2> Upcoming Events </h2>
+                    <!-- <div class="card--content" id="card"> -->
+                    <!--Front Side-->
+                    <!-- <div class="card front" style="width: 18rem;">
+                            <img class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Adele</h5>
+                                <p class="card-text">Location: <span id="location"></span></p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div> -->
+                    <!--Front Side-->
+
+                    <!--Back Side-->
+                    <!-- <div class="card back">
+                            <div class="card-body">
+
+                            </div>
+                        </div> -->
+                    <!--Back Side -->
+
+
+                    <!-- <div class="card--content">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Adele</h5>
+                                <p class="card-text">Location: <span id="location"></span></p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
+
+            </div>
+        </div>
+        </div>
+        <div class="row no-gutters">
+
+            <div id="trending" class="col-lg-12 my-auto showcase-text">
+                <h2> Trending </h2>
+                <!-- <div class="card--content">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Adele</h5>
+                            <p class="card-text">Location: <span id="location"></span></p>
+                            <a href="#" class="btn btn-primary">Details</a>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+        <div class="row no-gutters">
+
+            <div id="merchandise" class="col-lg-12 order-lg-1 my-auto showcase-text">
+                <h2> Merchandise </h2>
+                <!-- <div class="card--content">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Adele</h5>
+                            <p class="card-text">Location: <span id="location"></span></p>
+                            <a href="#" class="btn btn-primary">Details</a>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- Testimonials -->
+    <!-- <section class="testimonials text-center bg-light">
+        <div class="container">
+            <h2 class="mb-5">What people are saying...</h2>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                        <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+                        <h5>Margaret E.</h5>
+                        <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                        <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+                        <h5>Fred S.</h5>
+                        <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of
+                            super nice landing pages."</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                        <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+                        <h5>Sarah W.</h5>
+                        <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to
+                            us!"</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+    <!-- Call to Action -->
+    <section class="call-to-action text-white text-center">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-9 mx-auto">
+                    <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+                </div>
+                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                    <form>
+                        <div class="form-row">
+                            <div class="col-12 col-md-9 mb-2 mb-md-0">
+                                <input type="email" class="form-control form-control-lg"
+                                    placeholder="Enter your email...">
+                            </div>
+                            <div class="col-12 col-md-3">
+                                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
-    <footer class="footer bg-light">
+    <!-- <footer class="footer bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
@@ -122,11 +296,20 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
+    <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="assets/javascript/tm-api.js"></script>
+    <script src="assets/javascript/logic.js"></script>
+    <script>
+        $("#card").flip({
+            trigger: 'manual'
+        });
+    </script>
 
 </body>
 
