--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
         integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 
     <title>Music Hack</title>
 
@@ -35,15 +36,15 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-light bg-light static-top">
+    <!-- <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"> Home </a>
             <!-- <a class="navbar-brand" href="html-pages/genre.html"> Genre </a>
             <a class="navbar-brand" href="html-pages/trending.html"> Trending </a>
             <a class="navbar-brand" href="html-pages/merchandise.html"> Merchandise </a> -->
-            <a class="navbar-brand" href="html-pages/contact.html">Contact</a>
-        </div>
-    </nav>
+    <!-- <a class="navbar-brand" href="html-pages/contact.html">Contact</a>
+    </div>
+    </nav>  -->
 
     <!-- Masthead -->
     <header class="masthead text-white text-center">
@@ -73,11 +74,53 @@
                     </form>
                 </div>
             </div>
+            <div class="row">
+                <section class="features-icons bg-light text-center icon-display">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-4 icon-text">
+                                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 icons">
+                                    <div class="features-icons-icon d-flex">
+                                        <a href="#upcoming-events"><i id="icon-calendar"
+                                                class="far fa-calendar-alt m-auto text-primary"></i></a>
+                                    </div>
+                                    <h3> Upcoming Events </h3>
+                                    <p class="lead mb-0"> Find upcoming concerts and tickets! </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 icon-text">
+                                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 icons">
+                                    <div class="features-icons-icon d-flex">
+                                        <a href="#trending"><i id="icon-chart-line"
+                                                class="fas fa-chart-line m-auto text-primary"></i></a>
+                                    </div>
+                                    <h3> Social Media Trends </h3>
+                                    <p class="lead mb-0">Featuring the latest trends related to the concert you're
+                                        looking for.</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 icon-text">
+                                <div class="features-icons-item mx-auto mb-0 mb-lg-3 icons">
+                                    <div class="features-icons-icon d-flex">
+                                        <a href="#merchandise"><i id="icon-merch"
+                                                class="fas fa-tshirt m-auto text-primary"></i></a>
+                                    </div>
+                                    <h3> Merchandise </h3>
+                                    <p class="lead mb-0">Browse the latest merchandise related to your favorite artist
+                                        and their
+                                        upcoming concerts!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+            </div>
         </div>
     </header>
 
     <!-- Icons Grid -->
-    <section class="features-icons bg-light text-center">
+    <!-- <section class="features-icons bg-light text-center icon-display">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 icon-text">
@@ -106,12 +149,13 @@
                             <a href="#merchandise"><i id="icon-merch" class="fas fa-tshirt m-auto text-primary"></i></a>
                         </div>
                         <h3> Merchandise </h3>
-                        <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                        <p class="lead mb-0">Browse the latest merchandise related to your favorite artist and their
+                            upcoming concerts!</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Image Showcases -->
     <section class="showcase">
@@ -119,10 +163,30 @@
             <div class="row no-gutters">
 
 
-                <div id="upcoming-events" class="col-sm-12 d-flex justify-content-center">
+                <div id="upcoming-events" class="col-sm-12">
                     <h2> Upcoming Events </h2>
-                    <!-- <section class="card"> -->
-                    <div class="card--content">
+                    <!-- <div class="card--content" id="card"> -->
+                    <!--Front Side-->
+                    <!-- <div class="card front" style="width: 18rem;">
+                            <img class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Adele</h5>
+                                <p class="card-text">Location: <span id="location"></span></p>
+                                <a href="#" class="btn btn-primary">Details</a>
+                            </div>
+                        </div> -->
+                    <!--Front Side-->
+
+                    <!--Back Side-->
+                    <!-- <div class="card back">
+                            <div class="card-body">
+
+                            </div>
+                        </div> -->
+                    <!--Back Side -->
+
+
+                    <!-- <div class="card--content">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top">
                             <div class="card-body">
@@ -131,46 +195,44 @@
                                 <a href="#" class="btn btn-primary">Details</a>
                             </div>
                         </div>
-                    </div>
-                    <!-- </section> -->
+                    </div> -->
                 </div>
-            </div>
-            <div class="row no-gutters">
 
-                <div id="trending" class="col-lg-12 my-auto showcase-text">
-                    <h2> Trending </h2>
-                    <section class="card">
-                        <div class="card--content">
-                            <div class="card" style="width: 18rem;">
-                                <img class="card-img-top">
-                                <div class="card-body">
-                                    <h5 class="card-title">Adele</h5>
-                                    <p class="card-text">Location: <span id="location"></span></p>
-                                    <a href="#" class="btn btn-primary">Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
             </div>
-            <div class="row no-gutters">
+        </div>
+        </div>
+        <div class="row no-gutters">
 
-                <div id="merchandise" class="col-lg-12 order-lg-1 my-auto showcase-text">
-                    <h2> Merchandise </h2>
-                    <!-- <section class="card"> -->
-                    <div class="card--content">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">Adele</h5>
-                                <p class="card-text">Location: <span id="location"></span></p>
-                                <a href="#" class="btn btn-primary">Details</a>
-                            </div>
+            <div id="trending" class="col-lg-12 my-auto showcase-text">
+                <h2> Trending </h2>
+                <!-- <div class="card--content">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Adele</h5>
+                            <p class="card-text">Location: <span id="location"></span></p>
+                            <a href="#" class="btn btn-primary">Details</a>
                         </div>
                     </div>
-                    <!-- </section> -->
-                </div>
+                </div> -->
             </div>
+        </div>
+        <div class="row no-gutters">
+
+            <div id="merchandise" class="col-lg-12 order-lg-1 my-auto showcase-text">
+                <h2> Merchandise </h2>
+                <!-- <div class="card--content">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Adele</h5>
+                            <p class="card-text">Location: <span id="location"></span></p>
+                            <a href="#" class="btn btn-primary">Details</a>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
         </div>
     </section>
 
@@ -285,6 +347,11 @@
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="assets/javascript/tm-api.js"></script>
     <script src="assets/javascript/logic.js"></script>
+    <script>
+        $("#card").flip({
+            trigger: 'manual'
+        });
+    </script>
 
 </body>
 
