--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="assets/javascript/tm-api.js"></script>
+    <script src="assets/javascript/news-api.js"></script>
     <script src="assets/javascript/logic.js"></script>
 
 </body>
