created toggle feature for event like icon and updates navbars for other html pages

--- a/html-pages/favorites.html
+++ b/html-pages/favorites.html
@@ -36,22 +36,22 @@
                             <a href="../index.html"> Home</a>
                         </li>
                         <li>
-                            <a href="#search"> Search </a>
+                            <a href="../index.html#search"> Search </a>
                         </li>
                         <li>
-                            <a href="#upcoming-events">Upcoming Events </a>
+                            <a href="../index.html#upcoming-events">Upcoming Events </a>
                         </li>
                         <li>
-                            <a href="#trending">Trending </a>
+                            <a href="../index.html#trending">Trending </a>
                         </li>
                         <li>
-                            <a href="#merchandise"> Merchandise </a>
+                            <a href="merchandise.html"> Merchandise </a>
                         </li>
                         <li>
-                            <a href="../html-pages/favorites.html"> Your Favorites </a>
+                            <a href="favorites.html"> Favorites </a>
                         </li>
                         <li>
-                            <a href="#contact"> Contact </a>
+                            <a href="contact.html"> Contact </a>
                         </li>
                     </ul>
                 </div>
@@ -59,25 +59,25 @@
         </nav>
         <ul class="sidenav" id="slide-out">
             <li>
-                <a href="#home"> Home</a>
+                <a href="../index.html"> Home</a>
             </li>
             <li>
-                <a href="#search"> Search </a>
+                <a href="../index.html#search"> Search </a>
             </li>
             <li>
-                <a href="#upcoming-events">Upcoming Events </a>
+                <a href="../index.html#upcoming-events">Upcoming Events </a>
             </li>
             <li>
-                <a href="#trending">Trending </a>
+                <a href="../index.html#trending">Trending </a>
             </li>
             <li>
-                <a href="#merchandise"> Merchandise </a>
+                <a href="merchandise.html"> Merchandise </a>
             </li>
             <li>
-                <a href="../html-pages/favorites.html"> Your Favorites </a>
+                <a href="favorites.html"> Favorites </a>
             </li>
             <li>
-                <a href="#contact"> Contact </a>
+                <a href="contact.html"> Contact </a>
             </li>
         </ul>
     </div>
