--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     </script>
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script src="assets/javascript/materialize.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearch.min.js"></script>
     <script src="assets/javascript/tm-api.js"></script>
     <script src="../project-1/assets/javascript/favorites.js"></script>
 
