fixed the event like icon toggle

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
-                                <i class="material-icons"> check </i>
+                                <i id="check-icon" class="material-icons"> check </i>
                             </a>
                         </div>
                         <div class="card-content">
