initial files added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Hack</title>
 
-    <link rel="stylesheet" type="text/css" href="../project-1/assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../project-1/assets/css/homepage.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/homepage.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -142,7 +142,7 @@
                 <div id="card-row-container" class="col s12 m4 d-flex justify-content-between">
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="event-like-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a id="favorite-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="favorite-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
@@ -221,7 +221,7 @@
                 <div id="trending-container" class="col s12 m4 d-flex justify-content-between">
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
                                 <i class="material-icons"> check </i>
                             </a>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
                                 <i class="material-icons"> check </i>
                             </a>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
                                 <i class="material-icons"> check </i>
                             </a>
@@ -364,7 +364,7 @@
     <script src="assets/javascript/news-api.js"></script>
     <script src="assets/javascript/tm-api.js"></script>
     <script src="assets/javascript/logic.js"></script>
-    <script src="../project-1/assets/javascript/favorites.js"></script>
+    <script src="assets/javascript/favorites.js"></script>
 
 </body>
 
