--- a/index.html
+++ b/index.html
@@ -360,11 +360,14 @@
     </script>
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script src="assets/javascript/materialize.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/places.js@1.17.0"></script>
     <script src="assets/javascript/news-api.js"></script>
     <script src="assets/javascript/tm-api.js"></script>
     <script src="assets/javascript/logic.js"></script>
     <script src="assets/javascript/favorites.js"></script>
+    <script src="assets/javascript/autocomplete.js"></script>
+
+
 
 </body>
 
