fixed links on index.html and centered hack it button

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                 <a href="#trending">Trending </a>
             </li>
             <li>
-                <a href="../project-1/html-pages/merchandise.html"> Merchandise </a>
+                <a href="html-pages/merchandise.html"> Merchandise </a>
             </li>
             <li>
-                <a href="../html-pages/favorites.html"> Favorites </a>
+                <a href="html-pages/favorites.html"> Favorites </a>
             </li>
             <li>
-                <a href="#contact"> Contact </a>
+                <a href="html-pages/contact.html"> Contact </a>
             </li>
         </ul>
     </div>
@@ -108,9 +108,11 @@
     </div>
 
     <!-- Search Form -->
+    <form>
     <div id="search" class="section section-search purple darken-1 white-text center scrollspy">
         <div class="container">
             <div class="row">
+                
                 <div class="col s6">
                     <h3>Search Artist</h3>
                     <div class="input-field">
@@ -126,7 +128,7 @@
                     </div>
                 </div>
             </div>
-            <div row>
+            <div class="row justify-content-center">
                 <div class="col-12 col-md-3">
                     <button id="hack-it" type="submit" class="btn btn-block btn-lg btn-primary"> Hack It!
                     </button>
@@ -134,6 +136,7 @@
             </div>
         </div>
     </div>
+</form>
 
     <!-- Upcoming Events cards-->
     <div id="popular upcoming-events" class="section section-popular scrollspy">
