--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -186,7 +186,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js">
   </script>
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
-  <script src="assets/javascript/materialize.js"></script>
+  <script src="../assets/javascript/materialize.js"></script>
 </body>
 
 </html>
