fixed anchor links and sticky nav

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <body id="home" class="scrollspy">
     <!--Navbar-->
     <div>
-        <nav class="purple navbar-fixed">
+        <div class="navbar-fixed">
+        <nav class="purple">
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo left-align"> Music Hack </a>
@@ -58,6 +59,7 @@
                 </div>
             </div>
         </nav>
+    </div>
         <ul class="sidenav" id="slide-out">
             <li>
                 <a href="index.html"> Home</a>
@@ -139,7 +141,7 @@
 </form>
 
     <!-- Upcoming Events cards-->
-    <div id="popular upcoming-events" class="section section-popular scrollspy">
+    <div id="upcoming-events" class="section section-popular scrollspy">
         <h2> Upcoming Events </h2>
         <div class="container">
             <div id="card-row" class="row">
@@ -218,7 +220,7 @@
         </div>
     </div>
     <!-- Trending cards-->
-    <div id="popular trending" class="section section-popular scrollspy">
+    <div id="trending" class="section section-popular scrollspy">
         <h2> Trending </h2>
         <div class="container">
             <div id="card-row" class="row">
