commented out favorites page for the sake of presentation time constraints

--- a/html-pages/favorites.html
+++ b/html-pages/favorites.html
@@ -83,7 +83,7 @@
     </div>
 
     <!-- Favorite events cards-->
-
+    <!-- 
     <div id="popular favorite-events" class="section section-popular scrollspy">
         <h2> Your Saved Events </h2>
         <div class="container">
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
