firebase login authentication created with login.html and login.js

--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -17,6 +17,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
+
+
   <title>Music Hack</title>
 
   <!-- Bootstrap core CSS -->
@@ -104,6 +108,7 @@
               <li>
                 <a href="#contact"> Contact </a>
               </li>
+
             </ul>
           </div>
         </div>
@@ -130,6 +135,7 @@
         <li>
           <a href="#contact"> Contact </a>
         </li>
+
       </ul>
     </div>
 
@@ -187,6 +193,7 @@
   </script>
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
   <script src="../assets/javascript/materialize.js"></script>
+  <script src="assets/javascript/firebase.js"></script>
 </body>
 
 </html>
