--- a/html-pages/merchandise.html
+++ b/html-pages/merchandise.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
+
   <title>Music Hack</title>
 
   <!-- Bootstrap core CSS -->
@@ -103,6 +106,7 @@
             <li>
               <a href="contact.html"> Contact </a>
             </li>
+
           </ul>
         </div>
       </div>
@@ -129,6 +133,7 @@
       <li>
         <a href="contact.html"> Contact </a>
       </li>
+
     </ul>
   </div>
 
@@ -244,6 +249,7 @@
   </script>
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
   <script src="../assets/javascript/materialize.js"></script>
+  <script src="assets/javascript/firebase.js"></script>
 
 </body>
 
