--- a/html-pages/favorites.html
+++ b/html-pages/favorites.html
@@ -16,9 +16,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
         integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
 </head>
 
 <body id="home" class="scrollspy">
@@ -83,7 +84,7 @@
     </div>
 
     <!-- Favorite events cards-->
-    <!-- 
+
     <div id="popular favorite-events" class="section section-popular scrollspy">
         <h2> Your Saved Events </h2>
         <div class="container">
@@ -161,7 +162,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
 
