boolean popup modal created to give user option to create account or login

--- a/html-pages/merchandise.html
+++ b/html-pages/merchandise.html
@@ -80,14 +80,12 @@
     <nav class="purple navbar-fixed">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo left-align"> Music Hack </a>
+          <a href="../index.html" class="brand-logo left-align"> Music Hack </a>
           <a href="#" data-target="slide-out" class="sidenav-trigger">
             <i class="material-icons"> menu </i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li>
-              <a href="../index.html"> Home</a>
-            </li>
+
             <li>
               <a href="../index.html#search"> Search </a>
             </li>
@@ -106,7 +104,9 @@
             <li>
               <a href="contact.html"> Contact </a>
             </li>
-
+            <li>
+              <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Account</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -133,8 +133,22 @@
       <li>
         <a href="contact.html"> Contact </a>
       </li>
-
+      <li>
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Account</a>
+      </li>
     </ul>
+  </div>
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Do you have an account?</h4>
+      <p>Create an account with Music Hack to receive information tailored to your saved artists, events,
+        trending, and merchandise! </p>
+    </div>
+    <div class="modal-footer">
+      <a id="account-yes" href="login.html" class="modal-close waves-effect waves-green btn-flat"> Yes </a>
+      <a id="account-no" href="createAccount.html" class="modal-close waves-effect waves-green btn-flat"> No </a>
+    </div>
   </div>
 
   <div class="row">
