--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
                 trending, and merchandise! </p>
         </div>
         <div class="modal-footer">
-            <a id="account-yes" href="login.html" class="modal-close waves-effect waves-green btn-flat"> Yes </a>
-            <a id="account-no" href="createAccount.html" class="modal-close waves-effect waves-green btn-flat"> No </a>
+            <a id="account-yes" href="../project-1/html-pages/login.html"
+                class="modal-close waves-effect waves-green btn-flat"> Yes </a>
+            <a id="account-no" href="../project-1/html-pages/createAccount.html"
+                class="modal-close waves-effect waves-green btn-flat"> No </a>
         </div>
     </div>
 
