--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -142,13 +142,13 @@
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
       <div class="modal-content">
-        <h4>Do you have an account?</h4>
-        <p>Create an account with Music Hack to receive information tailored to your saved artists, events,
-          trending, and merchandise! </p>
+        <h4>Create an account?</h4>
+        <p>Sign in through your email to create an account where you can save your favorite artist concert events,
+          trending, and merchandise information. </p>
       </div>
       <div class="modal-footer">
         <a id="account-yes" href="login.html" class="modal-close waves-effect waves-green btn-flat"> Yes </a>
-        <a id="account-no" href="createAccount.html" class="modal-close waves-effect waves-green btn-flat"> No </a>
+        <a id="account-no" href="../index.html" class="modal-close waves-effect waves-green btn-flat"> No </a>
       </div>
     </div>
 
